# OFFAT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  SECURITY.md  action.yml  index.md  info.md  leaders.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: dev-push.yml  goreleaser.yml  pypi-publish.yml  release-push.yml  test-project.yml
src/: .env.sample  .gitignore  .goreleaser.yaml  CODE_OF_CONDUCT.md  DISCLAIMER.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
src/DockerFiles/: backend-api-worker-Dockerfile  base-Dockerfile  cli-Dockerfile  wolfi-base-Dockerfile
src/DockerFiles/dev/: backend-api-Dockerfile  backend-api-worker-Dockerfile  cli-Dockerfile
src/DockerFiles/main/: backend-api-Dockerfile
src/cmd/offat/: flag.go  main.go
src/offat/: __main__.py  config_data_handler.py  http.py  logger.py  openapi.py  utils.py
src/offat/api/: __main__.py  app.py  auth_utils.py  config.py  jobs.py  models.py  schema.py
src/offat/parsers/: __init__.py  openapi.py  parser.py  swagger.py  utils.py
src/offat/report/: generator.py  summary.py  table.py
src/offat/report/templates/: report.html  table.py
src/offat/tester/: data_exposure.py  fuzzer.py  generator.py  handler.py  post_test_processor.py  regexs.py  runner.py  test_generator.py  test_results.py  test_runner.py  tester_utils.py
src/offat/tests/parsers/: test_parser.py
src/offat/tests/self_signed/: self_signed_server_tester.py
src/offat/tests/testers/: test_fuzzer.py
src/offat/tests/utils/: test_parse_server_url.py  test_url_validations.py
src/pkg/fuzzer/: charsets.go  fuzzer.go  fuzzer_test.go  utils.go
src/pkg/http/: http.go  http_test.go  structs.go
src/pkg/logging/: logging.go
src/pkg/openapi/: validation.go
src/pkg/parser/: fuzz.go  openapi.go  params.go  parser.go  swagger.go  validation.go
src/pkg/report/: report.go  table.go
src/pkg/tgen/: basicSqli.go  basicSqliTest.go  basicSsrf.go  bola.go  constants.go  missingAuth.go  osCommandInjection.go  payloadInjection.go  simpleSqliTest.go  sstiInjection.go  struct.go  tgen.go  unrestrictedmethods.go  utils.go  xssHtmlInjection.go
src/pkg/trunner/: runner.go
src/pkg/trunner/postrunner/: dataleak.go  dataleak_test.go  filter.go  postrunner.go  statusCode.go
src/pkg/utils/: reader.go  regex.go  slices.go  slices_test.go  validation.go  writer.go
src/test-files/: us-oas.yml
