[tool.poetry]
name = "offat"
version = "0.15.4"
description = "Offensive API tester tool automates checks for common API vulnerabilities"
authors = ["Dhrumil Mistry <dhrumil.mistry@owasp.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pyyaml = "^6.0"
fastapi = {version = "^0.109.1", optional = true}
uvicorn = {extras = ["standard"], version = "^0.23.2", optional = true}
rq = {version = "^1.15.1", optional = true}
redis = {version = "^5.0.0", optional = true}
python-dotenv = {version = "^1.0.0", optional = true}
rich = "^13.7.0"
aiolimiter = "^1.1.0"
openapi-spec-validator = "^0.7.1"
setuptools = "^69.0.3"
tenacity = "^8.2.3"

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "redis", "rq", "python-dotenv"]

[tool.poetry.urls]
"Home" = "https://github.com/OWASP/OFFAT"
"Bug Tracker" = "https://github.com/OWASP/OFFAT/issues"
"Support" = "https://github.com/sponsors/OWASP/"


[tool.poetry.scripts]
offat = "offat.__main__:start"
offat-api = "offat.api.__main__:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
